// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugins/babel > babel-loader should works with builtin:swc-loader 1`] = `
{
  "dependency": {
    "not": "url",
  },
  "exclude": [
    "src/example",
  ],
  "include": [
    {
      "and": [
        "<ROOT>/packages/plugin-babel/tests",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
    /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    /node_modules\\[\\\\\\\\/\\]query-string\\[\\\\\\\\/\\]/,
  ],
  "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
  "type": "javascript/auto",
  "use": [
    {
      "loader": "builtin:swc-loader",
      "options": {
        "env": {
          "mode": undefined,
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
        "isModule": "unknown",
        "jsc": {
          "experimental": {
            "cacheRoot": "<ROOT>/packages/plugin-babel/tests/node_modules/.cache/.swc",
            "keepImportAttributes": true,
          },
          "externalHelpers": true,
          "parser": {
            "decorators": true,
            "syntax": "typescript",
            "tsx": false,
          },
          "transform": {
            "decoratorVersion": "2022-03",
            "legacyDecorator": false,
          },
        },
      },
    },
    {
      "loader": "<ROOT>/packages/plugin-babel/compiled/babel-loader/index.js",
      "options": {
        "babelrc": false,
        "compact": false,
        "configFile": false,
        "plugins": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
            {
              "version": "2022-03",
            },
          ],
        ],
        "presets": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
            {
              "allExtensions": true,
              "allowDeclareFields": true,
              "allowNamespaces": true,
              "isTSX": true,
              "optimizeConstEnums": true,
            },
          ],
        ],
      },
    },
  ],
}
`;

exports[`plugins/babel > should apply environment config correctly 1`] = `
{
  "dependency": {
    "not": "url",
  },
  "exclude": [
    "src/example",
  ],
  "include": [
    {
      "and": [
        "<ROOT>/packages/plugin-babel/tests",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
    /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
  ],
  "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
  "type": "javascript/auto",
  "use": [
    {
      "loader": "builtin:swc-loader",
      "options": {
        "env": {
          "mode": undefined,
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
        "isModule": "unknown",
        "jsc": {
          "experimental": {
            "cacheRoot": "<ROOT>/packages/plugin-babel/tests/node_modules/.cache/.swc",
            "keepImportAttributes": true,
          },
          "externalHelpers": true,
          "parser": {
            "decorators": true,
            "syntax": "typescript",
            "tsx": false,
          },
          "transform": {
            "decoratorVersion": "2022-03",
            "legacyDecorator": false,
          },
        },
      },
    },
    {
      "loader": "<ROOT>/packages/plugin-babel/compiled/babel-loader/index.js",
      "options": {
        "babelrc": false,
        "compact": false,
        "configFile": false,
        "plugins": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
            {
              "version": "2022-03",
            },
          ],
        ],
        "presets": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
            {
              "allExtensions": true,
              "allowDeclareFields": true,
              "allowNamespaces": true,
              "isTSX": true,
              "optimizeConstEnums": true,
            },
          ],
        ],
      },
    },
  ],
}
`;

exports[`plugins/babel > should apply environment config correctly 2`] = `
{
  "dependency": {
    "not": "url",
  },
  "exclude": [
    "src/example1",
  ],
  "include": [
    {
      "and": [
        "<ROOT>/packages/plugin-babel/tests",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
    /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
  ],
  "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
  "type": "javascript/auto",
  "use": [
    {
      "loader": "builtin:swc-loader",
      "options": {
        "env": {
          "targets": [
            "node >= 16",
          ],
        },
        "isModule": "unknown",
        "jsc": {
          "experimental": {
            "cacheRoot": "<ROOT>/packages/plugin-babel/tests/node_modules/.cache/.swc",
            "keepImportAttributes": true,
          },
          "externalHelpers": true,
          "parser": {
            "decorators": true,
            "syntax": "typescript",
            "tsx": false,
          },
          "transform": {
            "decoratorMetadata": true,
            "legacyDecorator": true,
            "useDefineForClassFields": false,
          },
        },
      },
    },
    {
      "loader": "<ROOT>/packages/plugin-babel/compiled/babel-loader/index.js",
      "options": {
        "babelrc": false,
        "compact": false,
        "configFile": false,
        "plugins": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
            {
              "version": "legacy",
            },
          ],
          "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-class-properties/lib/index.js",
        ],
        "presets": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
            {
              "allExtensions": true,
              "allowDeclareFields": true,
              "allowNamespaces": true,
              "isTSX": true,
              "optimizeConstEnums": true,
            },
          ],
        ],
      },
    },
  ],
}
`;

exports[`plugins/babel > should set babel-loader 1`] = `
{
  "dependency": {
    "not": "url",
  },
  "include": [
    {
      "and": [
        "<ROOT>/packages/plugin-babel/tests",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
    /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
  ],
  "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
  "type": "javascript/auto",
  "use": [
    {
      "loader": "builtin:swc-loader",
      "options": {
        "env": {
          "mode": undefined,
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
        "isModule": "unknown",
        "jsc": {
          "experimental": {
            "cacheRoot": "<ROOT>/packages/plugin-babel/tests/node_modules/.cache/.swc",
            "keepImportAttributes": true,
          },
          "externalHelpers": true,
          "parser": {
            "decorators": true,
            "syntax": "typescript",
            "tsx": false,
          },
          "transform": {
            "decoratorVersion": "2022-03",
            "legacyDecorator": false,
          },
        },
      },
    },
    {
      "loader": "<ROOT>/packages/plugin-babel/compiled/babel-loader/index.js",
      "options": {
        "babelrc": false,
        "compact": false,
        "configFile": false,
        "plugins": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
            {
              "version": "2022-03",
            },
          ],
        ],
        "presets": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
            {
              "allExtensions": true,
              "allowDeclareFields": true,
              "allowNamespaces": true,
              "isTSX": true,
              "optimizeConstEnums": true,
            },
          ],
        ],
      },
    },
  ],
}
`;

exports[`plugins/babel > should set babel-loader when config is add 1`] = `
{
  "dependency": {
    "not": "url",
  },
  "include": [
    {
      "and": [
        "<ROOT>/packages/plugin-babel/tests",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
    /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
  ],
  "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
  "type": "javascript/auto",
  "use": [
    {
      "loader": "builtin:swc-loader",
      "options": {
        "env": {
          "mode": undefined,
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
        "isModule": "unknown",
        "jsc": {
          "experimental": {
            "cacheRoot": "<ROOT>/packages/plugin-babel/tests/node_modules/.cache/.swc",
            "keepImportAttributes": true,
          },
          "externalHelpers": true,
          "parser": {
            "decorators": true,
            "syntax": "typescript",
            "tsx": false,
          },
          "transform": {
            "decoratorVersion": "2022-03",
            "legacyDecorator": false,
          },
        },
      },
    },
    {
      "loader": "<ROOT>/packages/plugin-babel/compiled/babel-loader/index.js",
      "options": {
        "babelrc": false,
        "cacheCompression": false,
        "cacheDirectory": "<ROOT>/packages/plugin-babel/tests/node_modules/.cache/babel-loader",
        "cacheIdentifier": "test",
        "compact": false,
        "configFile": false,
        "plugins": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
            {
              "version": "2022-03",
            },
          ],
          [
            "babel-plugin-import",
            {
              "libraryDirectory": "es",
              "libraryName": "my-components",
              "style": true,
            },
          ],
        ],
        "presets": [
          [
            "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
            {
              "allExtensions": true,
              "allowDeclareFields": true,
              "allowNamespaces": true,
              "isTSX": true,
              "optimizeConstEnums": true,
            },
          ],
        ],
      },
    },
  ],
}
`;
